external-crates/move/crates/move-compiler/tests/move_check/typing/constraints_not_satisfied_type_annotation.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
warning[W09005]: dead or unreachable code
  ┌─ tests/move_check/typing/constraints_not_satisfied_type_annotation.move:7:17
  │
7 │         ignore((abort 0: CupC<R>));
  │                 ^^^^^^^ Expected a value. Any code surrounding or after this expression will not be reached
  │
  = This warning can be suppressed with '#[allow(dead_code)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E05001]: ability constraint not satisfied
  ┌─ tests/move_check/typing/constraints_not_satisfied_type_annotation.move:7:26
  │
2 │     struct CupC<T: copy> { f: T }
  │                    ---- 'copy' constraint declared here
3 │     struct C {}
4 │     struct R {}
  │            - To satisfy the constraint, the 'copy' ability would need to be added here
  ·
7 │         ignore((abort 0: CupC<R>));
  │                          ^^^^^^^
  │                          │    │
  │                          │    The type '0x8675309::M::R' does not have the ability 'copy'
  │                          'copy' constraint not satisifed
